duck/test/fail/result_mismatch.duck
import base

main = exit 0

f :: Char -> Int
f x = x

_ = f 'x'
